# dns-active-cache

./: .gitignore  CMakeLists.txt  readme.md
conf/: dns_active_cache_rsyslog.conf  resolv.dns_cache
src/: CMakeLists.txt  dns_array.c  dns_array.h  dns_cache.c  dns_cache.h  dns_debug.c  dns_debug.h  dns_ectd.c  dns_etcd.h  dns_etcd_cache.c  dns_etcd_cache.h  dns_etcd_json_parser.h  dns_http.c  dns_packet.c  dns_packet.h  dns_question.c  dns_question.h  dns_resource.c  dns_resource.h  dns_service.c  dns_service.h  dns_service_etcd.c  dns_service_etcd.h  dns_settings.c  dns_settings.h  dns_string.c  dns_string.h  dns_utils.c  dns_utils.h  main.c  version_config.h.in
src/cmake/: FindJAJL.cmake
tests/: bug_test.sh  test_loop.sh
